# COPD_shirt

./: .gitignore  README.md
Arduino/CapacitiveStretchReader/: CapacitiveStretchReader.ino
Arduino/FrequencyMeter/: FrequencyMeter.ino
Arduino/IMU_ICM_20948/: IMU_ICM_20948.ino
Arduino/SD_Test/: SD_Test.ino
ESP32/: Programmeer_Guide_V1.docx
KiCad/Versie1/: Versie1.kicad_pcb  Versie1.kicad_pcb-bak  Versie1.net  Versie1.pro  Versie1.sch  Versie1.sch-bak  Versie1_ComponentLib.dcm  fp-info-cache  fp-lib-table  sym-lib-table
KiCad/Versie2/: Versie2.kicad_pcb  Versie2.kicad_pcb-bak  Versie2.net  Versie2.pro  Versie2.sch  Versie2.sch-bak  Versie2_ComponentLib.dcm  _autosave-Versie2.kicad_pcb  fp-info-cache  sym-lib-table
LTSpice/: Draft1.net  Draft1.op.raw  Draft1.raw  Draft2.op.raw  Draft2.raw  Level_Shifter.asc  Level_Shifter.op.raw  NE555.asc  NE555.net  NE555.op.raw  NE555.raw  Power Latch.asc  Relaxation Oscillator.asc  Relaxation Oscillator.op.raw
Python/: COPD_Data.txt  Data_Save.py  Data_Visualisatie.py  LiveTest.py  TCP_Socket_Server.py  Testdatavisualise.py  UDP_Socket_Server.py  data.csv  data2.csv
Python/Capacitive_Only/: Datavisualisatie_Capacitive.py  TCP_Capacitive.py  data.csv
eclipse-workspace/.metadata/: version.ini
eclipse-workspace/ADC_test/: .cproject  .project
eclipse-workspace/ADC_test2/: .cproject  .project
eclipse-workspace/Blink/: .cproject
eclipse-workspace/CAP_Test/: .cproject  .project
eclipse-workspace/IMU_SPI_Test/main/: BMS.c  BMS.h  CMakeLists.txt  IMU_Sensor.c  IMU_Sensor.h  spi_master_example_main.c
(+709 files in other folders)
